fix: button overflow

--- a/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/slider/styles/style.scss
+++ b/web/wp-content/themes/mm-bradentongulfislands/assets/src/scripts/gutenberg/blocks/slider/styles/style.scss
@@ -360,6 +360,8 @@ $colorPalette: "black", "gray", "tan", "white", "red";
 
 	&.card-style-signature-card {
 
+		overflow-y: hidden;
+
 		.swiper-slide {
 			article {
 
